# zensor

./: .gitignore  build.zig  build.zig.zon
src/: main.zig  root.zig
src/core/: dtype.zig  root.zig  small_vec.zig
src/cuda/: coretypes.zig  cublas.zig  device.zig  kernel.zig  mem.zig  root.zig  stream.zig
src/examples/: main.zig  mnist.zig
src/examples/train_py/: main.py  pyproject.toml  train_mnist.py
src/kernels/: eql.cu  eql.zig  kernels.zig  mmul.cu  mmul.zig
src/layers/: context.zig  linear.zig
src/nn/: root.zig
src/nn/functional/: relu.zig  root.zig
src/nn/layers/: linear.zig  root.zig
src/tensor/: broadcast.zig  context.zig  iterator.zig  root.zig  safetensors.zig  tensor.zig  testing.zig
src/tensor/fixtures/: test.safetensors
src/tensor/kernels/: add.cu  add.zig  all.cu  all.zig  common.cuh  common.zig  elementwise.zig  eql.cu  eql.zig  maximum.cu  maximum.zig  mmul.zig  root.zig
src/tensor/ops/: add.zig  all.zig  eql.zig  matmul.zig  maximum.zig  mmul.zig  root.zig
